Add ScottPlot for data visualization and model refactor
Updated project to include ScottPlot for rendering graphs. Refactored `Program.cs` to check for an existing trained model, removing hardcoded example data. Added functionality to visualize prediction results and save the plot as "revenue_graph.png".

--- a/ML_02_Solar_Pannel_Prediction_LR/ML_02_Solar_Pannel_Prediction_LR.csproj
+++ b/ML_02_Solar_Pannel_Prediction_LR/ML_02_Solar_Pannel_Prediction_LR.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <PackageReference Include="ScottPlot" Version="5.0.55" />
   </ItemGroup>
 
 </Project>
